--- a/IS.html
+++ b/IS.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -19,11 +20,13 @@
     <h1>Подсчет Прибыли</h1>
 
     <label for="income">Доход:</label>
-    <input type="number" id="income" placeholder="Введите доход" oninput="updateProfit()">
+    <input type="number" id="income" placeholder="Введите доход">
 
     <label for="expenses">Затраты:</label>
-    <input type="number" id="expenses" placeholder="Введите затраты" oninput="updateProfit()">
-    
+    <input type="number" id="expenses" placeholder="Введите затраты">
+
+    <button id="submit" onclick="updateProfit()">Ввести</button>
+
     <h2 id="result">Прибыль: 0 руб.</h2>
 
     <script>
@@ -35,7 +38,7 @@
             const expenses = parseFloat(document.getElementById('expenses').value) || 0;
 
             // Вычисляем новую прибыль
-            totalProfit = totalProfit + income - expenses;
+            totalProfit += income - expenses;
 
             // Отображаем результат
             document.getElementById('result').innerText = 'Прибыль: ' + totalProfit + ' руб.';
